--- a/trunk/ImageHelperCpp/ImageHelperCpp.vcxproj
+++ b/trunk/ImageHelperCpp/ImageHelperCpp.vcxproj
@@ -68,7 +68,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="detect.cpp" />
+    <ClCompile Include="io.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="reduce.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="detect.h" />
+    <ClInclude Include="io.h" />
+    <ClInclude Include="reduce.h" />
+    <ClInclude Include="types.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
