--- a/trunk/ImageHelperCpp/ImageHelperCpp.vcxproj
+++ b/trunk/ImageHelperCpp/ImageHelperCpp.vcxproj
@@ -69,12 +69,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="detect.cpp" />
+    <ClCompile Include="draw.cpp" />
     <ClCompile Include="io.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="reduce.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="detect.h" />
+    <ClInclude Include="draw.h" />
     <ClInclude Include="io.h" />
     <ClInclude Include="reduce.h" />
     <ClInclude Include="types.h" />
