--- a/ImageHelperCpp/ImageHelperCpp.vcxproj
+++ b/ImageHelperCpp/ImageHelperCpp.vcxproj
@@ -68,6 +68,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="check.cpp" />
     <ClCompile Include="detect.cpp" />
     <ClCompile Include="draw.cpp" />
     <ClCompile Include="io.cpp" />
@@ -75,6 +76,7 @@
     <ClCompile Include="reduce.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="check.h" />
     <ClInclude Include="detect.h" />
     <ClInclude Include="draw.h" />
     <ClInclude Include="io.h" />
