--- a/trunk/ImageHelperCpp/ImageHelperCpp.vcxproj
+++ b/trunk/ImageHelperCpp/ImageHelperCpp.vcxproj
@@ -75,6 +75,7 @@
     <ClCompile Include="findcycles.cpp" />
     <ClCompile Include="io.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="mesh.cpp" />
     <ClCompile Include="reduce.cpp" />
     <ClCompile Include="types.cpp" />
   </ItemGroup>
@@ -84,6 +85,7 @@
     <ClInclude Include="draw.h" />
     <ClInclude Include="findcycles.h" />
     <ClInclude Include="io.h" />
+    <ClInclude Include="mesh.h" />
     <ClInclude Include="quadtree.h" />
     <ClInclude Include="reduce.h" />
     <ClInclude Include="types.h" />
