- new countries map - refactoring

--- a/ImageHelperCpp/ImageHelperCpp.vcxproj
+++ b/ImageHelperCpp/ImageHelperCpp.vcxproj
@@ -70,6 +70,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="check.cpp" />
+    <ClCompile Include="countries.cpp" />
     <ClCompile Include="detect.cpp" />
     <ClCompile Include="draw.cpp" />
     <ClCompile Include="findcycles.cpp" />
@@ -81,6 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="check.h" />
+    <ClInclude Include="countries.h" />
     <ClInclude Include="detect.h" />
     <ClInclude Include="draw.h" />
     <ClInclude Include="findcycles.h" />
