- highlighting neighbor countries - refactoring

--- a/OnePercent/OnePercent.vcxproj.filters
+++ b/OnePercent/OnePercent.vcxproj.filters
@@ -59,6 +59,9 @@
     <ClCompile Include="CountryOverlay.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CountryMesh.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GlobeModel.h">
@@ -101,6 +104,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CountryOverlay.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CountryMesh.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
