--- a/OnePercent/OnePercent.vcxproj
+++ b/OnePercent/OnePercent.vcxproj
@@ -39,7 +39,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>E:\SDK\rapidxml-1.13;E:\SDK\OpenSceneGraph-3.2.1\build\x86\include;$(SolutionDir)osgGaming\include;$(IncludePath)</IncludePath>
+    <IncludePath>E:\SDK\rapidxml-1.13;E:\SDK\OpenSceneGraph-3.2.1\build\x86\include;$(SolutionDir)osgGaming\include;$(ProjectDir);$(IncludePath)</IncludePath>
     <LibraryPath>E:\SDK\OpenSceneGraph-3.2.1\build\x86\lib;$(SolutionDir)\osgGaming\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -76,44 +76,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Skill.cpp" />
-    <ClCompile Include="BackgroundModel.cpp" />
-    <ClCompile Include="CountriesMap.cpp" />
-    <ClCompile Include="Country.cpp" />
-    <ClCompile Include="CountryMesh.cpp" />
-    <ClCompile Include="CountryOverlay.cpp" />
-    <ClCompile Include="Globals.cpp" />
-    <ClCompile Include="GlobeCameraState.cpp" />
-    <ClCompile Include="GlobeInteractionState.cpp" />
-    <ClCompile Include="GlobeModel.cpp" />
-    <ClCompile Include="GlobeOverviewState.cpp" />
-    <ClCompile Include="GlobeOverviewWorld.cpp" />
-    <ClCompile Include="LoadingGlobeOverviewState.cpp" />
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="MainMenuState.cpp" />
-    <ClCompile Include="Simulation.cpp" />
-    <ClCompile Include="SkillBranch.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Skill.h" />
-    <ClInclude Include="BackgroundModel.h" />
-    <ClInclude Include="CountriesMap.h" />
-    <ClInclude Include="Country.h" />
-    <ClInclude Include="CountryMesh.h" />
-    <ClInclude Include="CountryOverlay.h" />
-    <ClInclude Include="Globals.h" />
-    <ClInclude Include="GlobeCameraState.h" />
-    <ClInclude Include="GlobeInteractionState.h" />
-    <ClInclude Include="GlobeModel.h" />
-    <ClInclude Include="GlobeOverviewState.h" />
-    <ClInclude Include="GlobeOverviewWorld.h" />
-    <ClInclude Include="LoadingGlobeOverviewState.h" />
-    <ClInclude Include="MainMenuState.h" />
-    <ClInclude Include="ProgressingValue.h" />
-    <ClInclude Include="Simulation.h" />
-    <ClInclude Include="SkillBranch.h" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="GameData\shaders\atmosphere.frag" />
     <None Include="GameData\shaders\atmosphere.vert" />
     <None Include="GameData\shaders\boundaries.frag" />
@@ -123,6 +85,44 @@
     <None Include="GameData\shaders\globe.vert" />
     <None Include="GameData\shaders\star.frag" />
     <None Include="GameData\shaders\star.vert" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="core\Globals.cpp" />
+    <ClCompile Include="core\main.cpp" />
+    <ClCompile Include="data\CountriesMap.cpp" />
+    <ClCompile Include="nodes\BackgroundModel.cpp" />
+    <ClCompile Include="nodes\CountryMesh.cpp" />
+    <ClCompile Include="nodes\CountryOverlay.cpp" />
+    <ClCompile Include="nodes\GlobeModel.cpp" />
+    <ClCompile Include="nodes\GlobeOverviewWorld.cpp" />
+    <ClCompile Include="simulation\Country.cpp" />
+    <ClCompile Include="simulation\Simulation.cpp" />
+    <ClCompile Include="simulation\Skill.cpp" />
+    <ClCompile Include="simulation\SkillBranch.cpp" />
+    <ClCompile Include="states\GlobeCameraState.cpp" />
+    <ClCompile Include="states\GlobeInteractionState.cpp" />
+    <ClCompile Include="states\GlobeOverviewState.cpp" />
+    <ClCompile Include="states\LoadingGlobeOverviewState.cpp" />
+    <ClCompile Include="states\MainMenuState.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="core\Globals.h" />
+    <ClInclude Include="data\CountriesMap.h" />
+    <ClInclude Include="nodes\BackgroundModel.h" />
+    <ClInclude Include="nodes\CountryMesh.h" />
+    <ClInclude Include="nodes\CountryOverlay.h" />
+    <ClInclude Include="nodes\GlobeModel.h" />
+    <ClInclude Include="nodes\GlobeOverviewWorld.h" />
+    <ClInclude Include="simulation\Country.h" />
+    <ClInclude Include="simulation\ProgressingValue.h" />
+    <ClInclude Include="simulation\Simulation.h" />
+    <ClInclude Include="simulation\Skill.h" />
+    <ClInclude Include="simulation\SkillBranch.h" />
+    <ClInclude Include="states\GlobeCameraState.h" />
+    <ClInclude Include="states\GlobeInteractionState.h" />
+    <ClInclude Include="states\GlobeOverviewState.h" />
+    <ClInclude Include="states\LoadingGlobeOverviewState.h" />
+    <ClInclude Include="states\MainMenuState.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
