--- a/trunk/OnePercent/OnePercent.vcxproj
+++ b/trunk/OnePercent/OnePercent.vcxproj
@@ -95,8 +95,12 @@
     <ClCompile Include="nodes\CountryOverlay.cpp" />
     <ClCompile Include="nodes\GlobeModel.cpp" />
     <ClCompile Include="nodes\GlobeOverviewWorld.cpp" />
-    <ClCompile Include="simulation\Country.cpp" />
+    <ClCompile Include="simulation\CountryData.cpp" />
+    <ClCompile Include="simulation\CountryValues.cpp" />
+    <ClCompile Include="simulation\ProgressingValueContainer.cpp" />
     <ClCompile Include="simulation\Simulation.cpp" />
+    <ClCompile Include="simulation\SimulationCallback.cpp" />
+    <ClCompile Include="simulation\SimulationVisitor.cpp" />
     <ClCompile Include="simulation\Skill.cpp" />
     <ClCompile Include="simulation\SkillBranch.cpp" />
     <ClCompile Include="states\GlobeCameraState.cpp" />
@@ -113,9 +117,13 @@
     <ClInclude Include="nodes\CountryOverlay.h" />
     <ClInclude Include="nodes\GlobeModel.h" />
     <ClInclude Include="nodes\GlobeOverviewWorld.h" />
-    <ClInclude Include="simulation\Country.h" />
+    <ClInclude Include="simulation\CountryData.h" />
+    <ClInclude Include="simulation\CountryValues.h" />
     <ClInclude Include="simulation\ProgressingValue.h" />
+    <ClInclude Include="simulation\ProgressingValueContainer.h" />
     <ClInclude Include="simulation\Simulation.h" />
+    <ClInclude Include="simulation\SimulationCallback.h" />
+    <ClInclude Include="simulation\SimulationVisitor.h" />
     <ClInclude Include="simulation\Skill.h" />
     <ClInclude Include="simulation\SkillBranch.h" />
     <ClInclude Include="states\GlobeCameraState.h" />
