--- a/trunk/osgGaming/osgGaming.vcxproj
+++ b/trunk/osgGaming/osgGaming.vcxproj
@@ -51,6 +51,7 @@
     <ClCompile Include="src\UIGrid.cpp" />
     <ClCompile Include="src\UIMarkupLoader.cpp" />
     <ClCompile Include="src\UIMCollectorVisitor.cpp" />
+    <ClCompile Include="src\UIRadioGroup.cpp" />
     <ClCompile Include="src\UIStackPanel.cpp" />
     <ClCompile Include="src\UIText.cpp" />
     <ClCompile Include="src\UIUpdateVisitor.cpp" />
@@ -108,6 +109,7 @@
     <ClInclude Include="include\osgGaming\UIGrid.h" />
     <ClInclude Include="include\osgGaming\UIMarkupLoader.h" />
     <ClInclude Include="include\osgGaming\UIMCollectorVisitor.h" />
+    <ClInclude Include="include\osgGaming\UIRadioGroup.h" />
     <ClInclude Include="include\osgGaming\UIStackPanel.h" />
     <ClInclude Include="include\osgGaming\UIText.h" />
     <ClInclude Include="include\osgGaming\UIUpdateVisitor.h" />
