--- a/OnePercent/CMakeLists.txt
+++ b/OnePercent/CMakeLists.txt
@@ -1,3 +1,8 @@
+cmake_policy(SET CMP0043 OLD)
+
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+set(CMAKE_AUTOMOC ON)
+
 add_source_directory(ONE_PERCENT_SOURCE core)
 add_source_directory(ONE_PERCENT_SOURCE data)
 add_source_directory(ONE_PERCENT_SOURCE nodes)
@@ -8,6 +13,9 @@ add_source_directory(ONE_PERCENT_SOURCE states)
 add_executable(OnePercent ${ONE_PERCENT_SOURCE})
 
 set_target_properties(OnePercent PROPERTIES DEBUG_POSTFIX "d")
+
+qt5_use_modules(OnePercent ${QT5_MODULES})
+source_group(GeneratedFiles FILES ${CMAKE_CURRENT_BINARY_DIR}/OnePercent_automoc.cpp)
 
 # specify needed osg libraries
 set(OSG_LIBRARIES_TMP "osg osgViewer osgUtil osgGA osgDB osgText osgPPU OpenThreads")
@@ -39,3 +47,6 @@ endforeach()
 
 # copy GameData
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/GameData DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
+set(CMAKE_INCLUDE_CURRENT_DIR OFF)
+set(CMAKE_AUTOMOC OFF)
