fixed warnings and osgGamingTest build

--- a/osgGamingTest/CMakeLists.txt
+++ b/osgGamingTest/CMakeLists.txt
@@ -20,6 +20,14 @@ include_directories(
 target_link_libraries(osgGamingTest
   osgGaming
   ${GTEST_BOTH_LIBRARIES})
+
+target_link_libraries(osgGamingTest
+  optimized ${OSGPPU_LIBRARY_RELEASE})
+  
+if (NOT ${OSGPPU_LIBRARY_RELEASE} STREQUAL ${OSGPPU_LIBRARY_DEBUG})
+  target_link_libraries(osgGamingTest
+    debug ${OSGPPU_LIBRARY_DEBUG})
+endif()
   
 if (MSVC)
   foreach(lib ${TEST_OSG_LIBRARIES})
